## PLUXML 5.8.8 (YYYY/MM/DD) ##
FIX Sitemap lastmod attribute is now set with the modification date #541 (gcyrillus-nomade, P3ter)
FIX Filter articles, comments and pages names in plxGlob #383 #545 (bazooka07)

## PLUXML 5.8.7 (2021/06/03) ##
[+] Move plugins cached css files to data folder #526 (bazooka07)
[+] Open static page from administration in a new tab #532 (bazooka07)
[+] i18n Occitan correction #535 (Mejans)
[+] PHPMailer update to 6.4.1 (P3ter)
FIX Comments no more displayed with PHP8 #529 (bazooka07)
FIX Revert .htaccess generation for plugins compatibility with url rewrite (P3ter)
FIX Wrong use of uasort() in pages and categories edition #530 (bazooka07)
FIX Display 404 error page when switching to a theme with a missing template #533 (bazooka07)
FIX Category creation can replace an existing category #534 (bazooka07)
FIX Minors CSS fixes (P3ter)

## PLUXML 5.8.6 (2021/02/15) ##
[+] Update PHPMailer 6.2.0 : security fixes and PHP 8.0 compatibility (P3ter)
[+] Distinct article and comment rss feeds configuration #521 (thx3r)
[+] Refine plxMotor::urlRewrite() to use parse_url() #520 (bazooka07)
FIX Missing thumbnail in first article #518 #525 (bazooka07, sudwebdesign)
FIX Error when editing .htaccess when Apache is not installed (P3ter)
FIX 404 Error when accessing /blog with url rewriting (bazooka07)
FIX Error on article publication caused by regex in plxMotor::artInfoFromFilename() #522 (bazooka07)
FIX Wording change on the capcha question #523 (Thx3r)

## PLUXML 5.8.5 (2021/01/11) ##
[+] Refine url rewriting rule #497 (bazooka07)
FIX Allow punctuation in articles and pages titles #505 (bazooka07)
FIX plxShow::catList() and plxShow::catId multiples article with same category #495 (bazooka07)
FIX Check if resetting password is not allowed before password change #500 (lolo3129, P3ter)
FIX Error with password reset token generation (P3ter)
FIX Check if a user profil is defined in the current session before changing it when necessary #511 (bazooka07)