@@ -583,7 +583,7 @@ $LANG = array (
 		'L_MENU_CONFIG' => 'Parameters',
 		'L_MENU_PROFIL_TITLE' => 'Manage your user profiles',
 		'L_MENU_PROFIL' => 'Profile',
-		'L_WARNING_INSTALLATION_FILE' => 'install.php file can still be found at your PluXml root.<br />For security reasons, it is strongly recommended to <a class="lnkdelete" href="?del=install">delete</a> it.',
+		'L_WARNING_INSTALLATION_FILE' => 'install.php file can still be found at your PluXml root.<br />For security reasons, it is strongly recommended to <a id="lnkdelete">delete</a> it.',
 
 		// user.php
 
