@@ -580,7 +580,7 @@ $LANG = array (
 		'L_MENU_CONFIG' => 'Parámetros',
 		'L_MENU_PROFIL_TITLE' => 'Gestionar sus perfiles de usuario',
 		'L_MENU_PROFIL' => 'Perfil',
-		'L_WARNING_INSTALLATION_FILE' => 'Todavía existe el archivo «install.php» en la raíz de PluXml.<br />Por razones de seguridad, le sugerimos que lo <a class="lnkdelete" href="?del=install">elimine</a>.',
+		'L_WARNING_INSTALLATION_FILE' => 'Todavía existe el archivo «install.php» en la raíz de PluXml.<br />Por razones de seguridad, le sugerimos que lo <a id="lnkdelete">elimine</a>.',
 
 		// user.php
 		'L_USER_UNKNOWN' => 'Usuario desconocido',
