@@ -1,4 +1,5 @@
 ## PLUXML 5.8.8 (YYYY/MM/DD) ##
+FIX Delete install.php link and redirect fixed for all administration pages #540 (P3ter)
 FIX Sitemap lastmod attribute is now set with the modification date #541 (gcyrillus-nomade, P3ter)
 FIX Filter articles, comments and pages names in plxGlob #383 #545 (bazooka07)
 
